<resources>
    <string name="app_name">DroidSamples</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_screen_message">Select an option on navigation menu to see a sample of that functionality</string>
    <string name="database_insert">Database insert</string>
    <string name="json">Json</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="mail">Mail</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="alert_insert_name">Insert name</string>
    <string name="question_insert_user">Are you sure to insert this user?</string>
    <string name="yes">Yes</string>
    <string name="user_successfully_saved">User successfully saved</string>
    <string name="no">No</string>
    <string name="mail_example">example@example.com</string>
    <string name="crud_example">Crud Example</string>
    <string name="database_example">Data Base Example</string>
    <string name="json_example">Json Example</string>
    <string name="maps_example">Maps Example</string>
</resources>
